--- a/index.html
+++ b/index.html
@@ -1,12 +1,145 @@
+<!--
+    TO RESTORE FROM WHAT REMAINS
+    YOU MUST BATTLE IN MY DOMAIN
+    IF YOU WANT TO STOP MY RHYMES
+    PUT IN THE JS CONSOLE itIsTime();
+-->
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://unpkg.com/jquery.terminal/js/jquery.terminal.min.js"></script>
-        <link href="https://unpkg.com/jquery.terminal/css/jquery.terminal.min.css" rel="stylesheet"/>        
-        <link href="terminal_override.css" rel="stylesheet"/>
-        <script src="terminal_init.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+        <style>
+            .green-bg {
+                background-color: rgb(32, 186, 93); 
+                color: white;
+            }
+            
+            .orange-bg {
+                color: white;
+                background-color: rgb(255, 112, 3);
+            }
+
+            .btn-orange {
+                color: white;
+                background-color: rgb(255, 112, 3);
+            }
+        </style>
     </head>
     <body>
+        <div class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand">KW Programming Club</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-expanded="false" aria-label="Open navbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-content">
+                <ul class="navbar-nav">
+                </ul>
+            </div>
+        </div>
+        <div id="main-wrapper" class="container-fluid" style="padding: 0;">
+            <div class="jumbotron jumbotron-fluid text-center green-bg" style="padding: 10%;">
+                <h1 class="">Kentwood Programming Club</h1>
+                <p class="fs-4 fw-light" id="intro-text">See our projects below!</p>
+            </div>
+            <div class="container py-md-5">
+                <div class="row">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-12 py-md-5">
+                                <h2 class="text-center">Our Projects</h2>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-4" style="height: 100%">
+                                <div class="card shadow-sm" >
+                                    <img src="assets/calc.png" class="card-img-top" width="100%" height="200px">
+                                    <div class="card-body">
+                                        <p class="card-text">
+                                            <h3 class="fs-4">Calculator</h3>
+                                            <p>Simple four function calculator with a futuristic design.</p>
+                                            <div>
+                                                <button class="btn btn-success">Open</button>
+                                            </div>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4" style="height: 100%">
+                                <div class="card shadow-sm">
+                                <img src="assets/random-melody.png" class="card-img-top" width="100%" height="200px">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        <h3 class="fs-4">Random Melody</h3>
+                                        <p>Automatically create musical notation for a randomly generated melody</p>
+                                        <div>
+                                            <button class="btn btn-success">Open</button>
+                                        </div>
+                                    </p>
+                                </div>
+                            </div>
+                            </div>
+                            <div class="col-md-4" style="height: 100%">
+                                <div class="card shadow-sm">
+                                    <img src="assets/planner.png" card-img-top" width="100%" height="200px">
+                                    <div class="card-body">
+                                        <p class="card-text">
+                                            <h3 class="fs-4">Planner</h3>
+                                            <p>Schedule your day right from your browser</p>
+                                            <div>
+                                                <button class="btn btn-success">Open</button>
+                                            </div>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="jumbotron jumbotron-fluid text-center green-bg" style="padding: 10%;">
+                <div class="jumbotron text-center" style="color: black;">
+                    <h2>What do we do?</h2>
+                    <p>
+                        In our club, we:
+                        <ul>
+                            <li>Explore real-world uses of computer science</li>
+                            <li>Design our own software</li>
+                            <li>Discuss the latest technology</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+            <script>
+                
+                function startSpookySeason() {
+                    let elems = $(".green-bg, .btn-success");
+                    for (let i = 0; i < elems.length; i++) {
+                        elems.addClass("orange-bg");
+                        elems.removeClass("btn-success");
+                    }
+                }
+
+                function spookyText() {
+                    $("#intro-text").html(
+                    "THIS PAGE IS CURSED<br/>"+
+                    "IT ONLY GETS WORSE<br/>"+
+                    "DON'T KNOW WHAT TO DO?<br/>"+
+                    "DON'T FEEL BLUE<br/>"+
+                    "IF YOU WANT A CLUE<br/>"+
+                    "PRESS CTRL-U<br/>"
+                    )
+                }
+
+                function itIsTime() {
+                    window.location="terminal.html"
+                }
+
+                setTimeout(startSpookySeason, 30000);
+                setTimeout(spookyText, 50000);
+
+            </script>
+        </div>
     </body>
 </html>
